--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "node-uuid": "*"
   },
   "engines": {
     "node": "6.9.1"
